# vaapi__vdpau-driver

./: .gitignore  Makefile.am  NEWS  README  configure.ac
debian/: changelog  changelog.in  control.in  vdpau-video.install
debian.upstream/: Makefile.am  changelog.in  control.in  copyright  rules
src/: Makefile.am  debug.c  debug.h  object_heap.c  object_heap.h  sysdeps.h  uasyncqueue.c  uasyncqueue.h  ulist.c  ulist.h  uqueue.c  uqueue.h  utils.c  utils.h  utils_glx.c  utils_glx.h  utils_x11.c  utils_x11.h  vaapi_compat.h  vdpau_buffer.c  vdpau_buffer.h  vdpau_decode.c  vdpau_decode.h  vdpau_driver.c  vdpau_driver.h  vdpau_driver_template.h  vdpau_dump.c  vdpau_dump.h  vdpau_gate.c  vdpau_gate.h  vdpau_image.c  vdpau_image.h  vdpau_mixer.c  vdpau_mixer.h  vdpau_subpic.c  vdpau_subpic.h  vdpau_video.c  vdpau_video.h  vdpau_video_glx.c  vdpau_video_glx.h  (+2 more)
